tests/snapshots/tekenizer_tests__tekenizer_tests__tekenizer_2.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "keyword",
            raw: "SELECT",
            span: Span {
                start: 0,
                end: 6,
            },
        },
    ],
)
