tests/snapshots/tekenizer_tests__tekenizer_tests__tekenizer_lexer_newline.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "keyword",
            raw: "abc",
            span: Span {
                start: 0,
                end: 3,
            },
        },
        Token {
            kind: "newline",
            raw: "\n",
            span: Span {
                start: 3,
                end: 4,
            },
        },
        Token {
            kind: "keyword",
            raw: "def",
            span: Span {
                start: 4,
                end: 7,
            },
        },
    ],
)
