tests/snapshots/tekenizer_tests__tekenizer_tests__tekenizer_lexer_newline_2.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "keyword",
            raw: "abc",
            span: Span {
                start: 0,
                end: 3,
            },
        },
        Token {
            kind: "newline",
            raw: "\r\n",
            span: Span {
                start: 3,
                end: 5,
            },
        },
        Token {
            kind: "keyword",
            raw: "def",
            span: Span {
                start: 5,
                end: 8,
            },
        },
    ],
)
