tests/snapshots/tekenizer_tests__tekenizer_tests__tekenizer_lexer_numeric.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "numeric",
            raw: "9",
            span: Span {
                start: 0,
                end: 1,
            },
        },
    ],
)
