tests/snapshots/tekenizer_tests__tekenizer_tests__tekenizer_lexer_numeric_2.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "numeric",
            raw: "9",
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: "dot",
            raw: ".",
            span: Span {
                start: 1,
                end: 2,
            },
        },
        Token {
            kind: "numeric",
            raw: "12",
            span: Span {
                start: 2,
                end: 4,
            },
        },
    ],
)
