tests/snapshots/tekenizer_tests__tekenizer_tests__tekenizer_lexer_numeric_3.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "numeric",
            raw: "9_123_123",
            span: Span {
                start: 0,
                end: 9,
            },
        },
        Token {
            kind: "dot",
            raw: ".",
            span: Span {
                start: 9,
                end: 10,
            },
        },
        Token {
            kind: "numeric",
            raw: "122_123_943",
            span: Span {
                start: 10,
                end: 21,
            },
        },
    ],
)
