tests/snapshots/tekenizer_tests__tekenizer_tests__tekenizer_lexer_string.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "string",
            raw: "any world",
            span: Span {
                start: 2,
                end: 11,
            },
        },
        Token {
            kind: "keyword",
            raw: "try",
            span: Span {
                start: 13,
                end: 16,
            },
        },
    ],
)
