tests/snapshots/tekenizer_tests__tekenizer_tests__tekenizer_lexer_string_scape.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "string",
            raw: "any \\'world",
            span: Span {
                start: 2,
                end: 13,
            },
        },
    ],
)
